Expand Java Manager configuration instructions in README
Detailed configuration options for the Java Manager have been added to the README, including explanations for JVM options, user directory, library path, class path, and the use of a separate config file. Example configurations for both Linux and Windows are provided to help users set up their environment more easily.